fix: improve contrast between secondary color & bg

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
     --popover-foreground: 222.2 84% 4.9%;
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 142.1 76.2% 36.3%;
+    --secondary: 142.68, 80.39%, 20%;
     --secondary-foreground: 355.7 100% 97.3%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
@@ -46,7 +46,7 @@
     --popover-foreground: 210 40% 98%;
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 142.1 76.2% 36.3%;
+    --secondary: 142.17, 75.12%, 40.98%;
     --secondary-foreground: 355.7 100% 97.3%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
